// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiling to CSS and JavaScript should return a map of files 1`] = `
Object {
  "Button.elo.css": "._w7qnl2 {
  border: 0px;
  background-color: red;
  padding-left: 10px
}

._w7qnl2_0-0 {
  background-color: red
}

._w7qnl2_0-0:hover {
  padding-left: 10px
}

._w7qnl2_0-0_1-0 {
  background-color: blue
}

._w7qnl2_1-1 {
  background-color: green
}",
  "Button.elo.js": "import './Button.elo.css'
import { getClassNameFromVariantMap, getDynamicStyleFromVariantMap } from '@elodin/runtime'

const variantClassNameMap = {
  \\"\\": {},
  \\"_0-0\\": {
    \\"Type\\": \\"Primary\\"
  },
  \\"_0-0_1-0\\": {
    \\"Type\\": \\"Primary\\",
    \\"Mode\\": \\"Dark\\"
  },
  \\"_1-1\\": {
    \\"Mode\\": \\"Light\\"
  }
}

const variantStyleMap = {
'__Type-Primary': props => ({
  \\"paddingLeft\\":props.paddingLeft,
  \\":hover\\":{\\"paddingRight\\":props.paddingRight}
}),
'__Type-Primary__Mode-Dark': props => ({
  \\"paddingLeft\\":props.padLeft
})
}

export function Button.elo(props = {}) {
  return {
    _className: '_elo_view ' + getClassNameFromVariantMap('_w7qnl2', variantClassNameMap, props),
    \\"borderWidth\\":props.borderWidth,
    ...getDynamicStyleFromVariantMap(variantStyleMap, props)
  }
}",
  "Label.elo.css": "._19ixzy1:hover {
  color: red
}

@media (min-width: 320px) {
  ._19ixzy1 {
    color: green
  }
}

@media (min-width: 320px) {
  ._19ixzy1:hover {
    color: blue
  }
}",
  "Label.elo.js": "import './Label.elo.css'

export function Label.elo(props = {}) {
  return {
    _className: '_elo_text _19ixzy1',
    \\"lineHeight\\":props.lineHeight,
    \\":hover\\":{\\"fontSize\\":props.fontSize},
    \\"@media (min-width: 320px)\\":{\\"fontSize\\":props.mediaFontSize,
\\":hover\\":{\\"fontSize\\":props.mediaHoverFontSize}}
  }
}",
  "_reset.elo.css": "._elo_view{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;overflow:hidden;-webkit-overflow-scrolling:touch;align-self:stretch;flex-direction:column;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-shrink:0;max-width:100%;box-sizing:border-box}._elo_text{display:inline}body{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;overflow:hidden;-webkit-overflow-scrolling:touch;align-self:stretch;flex-direction:column;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-shrink:0;max-width:100%;box-sizing:border-box;max-height:100vh}",
  "index.elo.js": "import './_reset.elo.css'
import { Button } from './Button.elo.js'
import { Label } from './Label.elo.js'

export {
  Button,
  Label
}",
}
`;

exports[`Compiling to CSS and JavaScript should return a map of files in devMode 1`] = `
Object {
  "Button.elo.css": ".Button_w7qnl2 {
  border: 0px;
  background-color: red;
  padding-left: 10px
}

.Button_w7qnl2__Type-Primary {
  background-color: red
}

.Button_w7qnl2__Type-Primary:hover {
  padding-left: 10px
}

.Button_w7qnl2__Type-Primary__Mode-Dark {
  background-color: blue
}

.Button_w7qnl2__Mode-Light {
  background-color: green
}",
  "Button.elo.js": "import './Button.elo.css'
import { getClassNameFromVariantMap, getDynamicStyleFromVariantMap } from '@elodin/runtime'

const variantClassNameMap = {
  \\"\\": {},
  \\"__Type-Primary\\": {
    \\"Type\\": \\"Primary\\"
  },
  \\"__Type-Primary__Mode-Dark\\": {
    \\"Type\\": \\"Primary\\",
    \\"Mode\\": \\"Dark\\"
  },
  \\"__Mode-Light\\": {
    \\"Mode\\": \\"Light\\"
  }
}

const variantStyleMap = {
'__Type-Primary': props => ({
  \\"paddingLeft\\":props.paddingLeft,
  \\":hover\\":{\\"paddingRight\\":props.paddingRight}
}),
'__Type-Primary__Mode-Dark': props => ({
  \\"paddingLeft\\":props.padLeft
})
}

export function Button.elo(props = {}) {
  return {
    _className: '_elo_view ' + getClassNameFromVariantMap('Button_w7qnl2', variantClassNameMap, props),
    \\"borderWidth\\":props.borderWidth,
    ...getDynamicStyleFromVariantMap(variantStyleMap, props)
  }
}",
  "Label.elo.css": ".Label_19ixzy1:hover {
  color: red
}

@media (min-width: 320px) {
  .Label_19ixzy1 {
    color: green
  }
}

@media (min-width: 320px) {
  .Label_19ixzy1:hover {
    color: blue
  }
}",
  "Label.elo.js": "import './Label.elo.css'

export function Label.elo(props = {}) {
  return {
    _className: '_elo_text Label_19ixzy1',
    \\"lineHeight\\":props.lineHeight,
    \\":hover\\":{\\"fontSize\\":props.fontSize},
    \\"@media (min-width: 320px)\\":{\\"fontSize\\":props.mediaFontSize,
\\":hover\\":{\\"fontSize\\":props.mediaHoverFontSize}}
  }
}",
  "_reset.elo.css": "._elo_view{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;overflow:hidden;-webkit-overflow-scrolling:touch;align-self:stretch;flex-direction:column;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-shrink:0;max-width:100%;box-sizing:border-box}._elo_text{display:inline}body{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;overflow:hidden;-webkit-overflow-scrolling:touch;align-self:stretch;flex-direction:column;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-shrink:0;max-width:100%;box-sizing:border-box;max-height:100vh}",
  "index.elo.js": "import './_reset.elo.css'
import { Button } from './Button.elo.js'
import { Label } from './Label.elo.js'

export {
  Button,
  Label
}",
}
`;

exports[`Compiling to CSS and JavaScript should return a map of files using custom fileName generators 1`] = `
Object {
  "BUTTON.css": "._w7qnl2 {
  border: 0px;
  background-color: red;
  padding-left: 10px
}

._w7qnl2_0-0 {
  background-color: red
}

._w7qnl2_0-0:hover {
  padding-left: 10px
}

._w7qnl2_0-0_1-0 {
  background-color: blue
}

._w7qnl2_1-1 {
  background-color: green
}",
  "BUTTON.js": "import './BUTTON.css'
import { getClassNameFromVariantMap, getDynamicStyleFromVariantMap } from '@elodin/runtime'

const variantClassNameMap = {
  \\"\\": {},
  \\"_0-0\\": {
    \\"Type\\": \\"Primary\\"
  },
  \\"_0-0_1-0\\": {
    \\"Type\\": \\"Primary\\",
    \\"Mode\\": \\"Dark\\"
  },
  \\"_1-1\\": {
    \\"Mode\\": \\"Light\\"
  }
}

const variantStyleMap = {
'__Type-Primary': props => ({
  \\"paddingLeft\\":props.paddingLeft,
  \\":hover\\":{\\"paddingRight\\":props.paddingRight}
}),
'__Type-Primary__Mode-Dark': props => ({
  \\"paddingLeft\\":props.padLeft
})
}

export function BUTTON(props = {}) {
  return {
    _className: '_elo_view ' + getClassNameFromVariantMap('_w7qnl2', variantClassNameMap, props),
    \\"borderWidth\\":props.borderWidth,
    ...getDynamicStyleFromVariantMap(variantStyleMap, props)
  }
}",
  "LABEL.css": "._19ixzy1:hover {
  color: red
}

@media (min-width: 320px) {
  ._19ixzy1 {
    color: green
  }
}

@media (min-width: 320px) {
  ._19ixzy1:hover {
    color: blue
  }
}",
  "LABEL.js": "import './LABEL.css'

export function LABEL(props = {}) {
  return {
    _className: '_elo_text _19ixzy1',
    \\"lineHeight\\":props.lineHeight,
    \\":hover\\":{\\"fontSize\\":props.fontSize},
    \\"@media (min-width: 320px)\\":{\\"fontSize\\":props.mediaFontSize,
\\":hover\\":{\\"fontSize\\":props.mediaHoverFontSize}}
  }
}",
  "_RESET.css": "._elo_view{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;overflow:hidden;-webkit-overflow-scrolling:touch;align-self:stretch;flex-direction:column;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-shrink:0;max-width:100%;box-sizing:border-box}._elo_text{display:inline}body{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;overflow:hidden;-webkit-overflow-scrolling:touch;align-self:stretch;flex-direction:column;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-shrink:0;max-width:100%;box-sizing:border-box;max-height:100vh}",
  "index.elo.js": "import './_RESET.css'
import { Button } from './BUTTON.js'
import { Label } from './LABEL.js'

export {
  Button,
  Label
}",
}
`;

exports[`Compiling to CSS and JavaScript should use the given adapter 1`] = `
Object {
  "Button.elo.css": "._w7qnl2 {
  border: 0px;
  background-color: red;
  padding-left: 10px
}

._w7qnl2_0-0 {
  background-color: red
}

._w7qnl2_0-0:hover {
  padding-left: 10px
}

._w7qnl2_0-0_1-0 {
  background-color: blue
}

._w7qnl2_1-1 {
  background-color: green
}",
  "Button.elo.js": "import './Button.elo.css'
import { getClassNameFromVariantMap, getDynamicStyleFromVariantMap } from '@elodin/runtime'
import { createComponent } from 'react-fela'

const variantMap = {
  \\"\\": {},
  \\"_0-0\\": {
    \\"Type\\": \\"Primary\\"
  },
  \\"_0-0_1-0\\": {
    \\"Type\\": \\"Primary\\",
    \\"Mode\\": \\"Dark\\"
  },
  \\"_1-1\\": {
    \\"Mode\\": \\"Light\\"
  }
}

const variantStyleMap = {
'__Type-Primary': props => ({
  \\"paddingLeft\\":props.paddingLeft,
  \\":hover\\":{\\"paddingRight\\":props.paddingRight}
}),
'__Type-Primary__Mode-Dark': props => ({
  \\"paddingLeft\\":props.padLeft
})
}

function Button.eloStyle(props  = {}) {
  return {
    _className: '_elo_view ' + getClassNameFromVariantMap('_w7qnl2', variantMap, props),
    \\"borderWidth\\":props.borderWidth,
    ...getDynamicStyleFromVariantMap(variantStyleMap, props)
  }
}

export const Button.elo = createComponent(Button.eloStyle)",
  "Label.elo.css": "._19ixzy1:hover {
  color: red
}

@media (min-width: 320px) {
  ._19ixzy1 {
    color: green
  }
}

@media (min-width: 320px) {
  ._19ixzy1:hover {
    color: blue
  }
}",
  "Label.elo.js": "import './Label.elo.css'
import { createComponent } from 'react-fela'

function Label.eloStyle(props  = {}) {
  return {
    _className: '_elo_text _19ixzy1',
    \\"lineHeight\\":props.lineHeight,
    \\":hover\\":{\\"fontSize\\":props.fontSize},
    \\"@media (min-width: 320px)\\":{\\"fontSize\\":props.mediaFontSize,
\\":hover\\":{\\"fontSize\\":props.mediaHoverFontSize}}
  }
}

export const Label.elo = createComponent(Label.eloStyle)",
  "_reset.elo.css": "._elo_view{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;overflow:hidden;-webkit-overflow-scrolling:touch;align-self:stretch;flex-direction:column;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-shrink:0;max-width:100%;box-sizing:border-box}._elo_text{display:inline}body{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;overflow:hidden;-webkit-overflow-scrolling:touch;align-self:stretch;flex-direction:column;-webkit-box-orient:vertical;-webkit-box-direction:normal;flex-shrink:0;max-width:100%;box-sizing:border-box;max-height:100vh}",
  "index.elo.js": "import './_reset.elo.css'
import { Button } from './Button.elo.js'
import { Label } from './Label.elo.js'

export {
  Button,
  Label
}",
}
`;
